--- a/book/book_0133.md
+++ b/book/book_0133.md
@@ -10,9 +10,9 @@
 022 미술관 홈페이에서 해당 전시회의 기획 의도나 참여 작가에 대해서도 읽어보고,,, (미리 1차 관람)
 - 관심 있는 작품 -> 소풍 가서 하는 보물찾기
 
-023 액자만 보고 오는 듯한 형식적인 무술관 나들이 지양 (사전학습)
+023 액자만 보고 오는 듯한 형식적인 미술관 나들이 지양 (사전학습)
 
-024 미술은 일상적인 생활처럼 받아들이게 하기 위해서 좀 일찍 시작하는 것이 좋을 것 같아요
+024 미술을 일상적인 생활처럼 받아들이게 하기 위해서 좀 일찍 시작하는 것이 좋을 것 같아요
 
 027 아이가 특히 관심을 보이는 한두점 앞에서만 이런저런 이야기를 나누고, 나머지 그림에는 천천히 발걸음을 옮기며 눈길만 주세요
 
@@ -22,7 +22,7 @@
 
 036 가족과의 대화에서 요즘 무엇이 관심사인지 무엇에서 스트레스를 받고 있는지가 은연중에 노출되곤 한답니다
 
-037 아이가 부모의 사고 틀에 메이지 않고 자유롭게 상상하도록 유도하는 것이 중요합니다 (예술을 즐길 줄 아는 정신적 유산)
+037 아이가 부모의 사고 틀에 메이지 않고 **자유롭게 상상하도록 유도**하는 것이 중요합니다 (예술을 즐길 줄 아는 정신적 유산)
 
 040 전시장에 둘 이상 왔다면 그림에 대한 대화는 바람직해요, 다만, 장소가 장소인만큼 목소리를 낮추어 이야기하는 것이 필요합니다 (서로의 생각을 스스럼 없이 말하는 자세 필요)
 
@@ -30,20 +30,20 @@
 
 055 그림의 가격을 책정하는 조건에는 작가의 인지도, 전시경력, 미술사적으로 시대적 상황에 있어서 어떤 획기적인 아이템을 표현하고 어떻게 밀도 있게 정립하였는가 (세상에 단 한 점인 작품을 사서 집에 걸어 두는 데 의의를 두세요)
 
-057 그림이란 정말 손으로 그려 내는 능력만큼 보는 는력도 중요
+057 그림이란 정말 손으로 그려 내는 능력만큼 보는 능력도 중요
 
 <br>
  
  
 ## **제2전시장. 미술관의 비밀**
 
-076 전시 도록은 '제2의 작품'이라고들 합니다. 도록에는 작가가 어떤 것에서 주제를 얻으며, 그 주제가 의미하는 바는 무엇인지, 이 전시회에서 어떤 것들을 보여 줄지 친절한 글도 있고, 미술 이론가들이 전문가적 입장에서 작품을 분석하고 그 작품의 의미를 적은 글도 있어요 (도록 구입은 작품에 대한 영구 임대비 지불이다)
+076 전시 **도록**은 '제2의 작품'이라고들 합니다. 도록에는 작가가 어떤 것에서 주제를 얻으며, 그 주제가 의미하는 바는 무엇인지, 이 전시회에서 어떤 것들을 보여 줄지 친절한 글도 있고, 미술 이론가들이 전문가적 입장에서 작품을 분석하고 그 작품의 의미를 적은 글도 있어요 (도록 구입은 작품에 대한 영구 임대비 지불이다)
 
 078 작품에 대한 감상문을 쓰는 것은 도록을 사서 집에서 차분하게 군것질을 하며 여유롭게 하세요
 
 **080 작품 설치 순서에는 깉은 고민의 과정이 녹아 있습니다.**
 
-081 큐레이터는 전시회의 테마와 방향 등을 기획하고 그에 맞는 작가를 섭외하며 전시 기간 중에는 전시 홈보는 물론 작품 훼손이 없도록 관리하고 전시후에는 작가에게 작품을 반송하는 일까지 모든 과정을 도맡아서 진행합니다
+081 큐레이터는 전시회의 테마와 방향 등을 기획하고 그에 맞는 작가를 섭외하며 전시 기간 중에는 전시 홍보는 물론 작품 훼손이 없도록 관리하고 전시후에는 작가에게 작품을 반송하는 일까지 모든 과정을 도맡아서 진행합니다
 
 <br>
  
@@ -51,7 +51,7 @@
 ## **제3전시장. 알아야 더 보인다**
 
 116 운동장과 같은 실외에서는 가벼운 몸짓이 좋겠지만 전시장에서는 느림의 미학이 필요합니다
-- 발걸음은 코끼리처럼 무겁게, 눈빛은 독수리처럼 날카롭게, 마음으로는 원숭이처럼 끝없는 의심을
+- **발걸음은 코끼리처럼 무겁게, 눈빛은 독수리처럼 날카롭게, 마음으로는 원숭이처럼 끝없는 의심을**
 
 128 서양화 vs 동양화
 - 서양화 : 하나의 시점, 이젤에 세워두고 작품과 대상물을 하나의 시점으로, 멀리서 보기도하고 가까이서 보기도 하면서 감상
