--- a/book/book_0133.md
+++ b/book/book_0133.md
@@ -41,7 +41,7 @@
 
 078 작품에 대한 감상문을 쓰는 것은 도록을 사서 집에서 차분하게 군것질을 하며 여유롭게 하세요
 
-**080 작품 설치 순서에는 깉은 고민의 과정이 녹아 있습니다.**
+**080 작품 설치 순서에는 깊은 고민의 과정이 녹아 있습니다.**
 
 081 큐레이터는 전시회의 테마와 방향 등을 기획하고 그에 맞는 작가를 섭외하며 전시 기간 중에는 전시 홍보는 물론 작품 훼손이 없도록 관리하고 전시후에는 작가에게 작품을 반송하는 일까지 모든 과정을 도맡아서 진행합니다
 
