--- a/book/book_0134.md
+++ b/book/book_0134.md
@@ -17,6 +17,59 @@
 
 ## **3. 르네상스(1400~1500)와 마니에리즘(1520~1600)**
 
+036  르네상스는 다시 태어난다는 뜻
+- 다시 찬란했던 고대 문화예술을 부흥
+- 신권 약화 : 페스트와 십자군 전쟁, 인본주의
+- 인간의 모습도 그리기 시작 (물론 왕과 권력자의 모습에 국한)
+
+036 이탈리아 도시국가 : 예술품에 대한 소유 경쟁
+- 로마 교황청, 피렌체 공화국, 밀라노 공국, 베네치아 공화국, 나폴리 왕국
+- 메디치 가문, 은행업, 피렌체
+
+036 WoW 공화국, 왕국, 공국
+- 공화국 : 시민들 참여 정치 (귀족 또는 시민 계층) : 귀족, 상류계츰, 부유한 상인계층
+- 왕국 : 왕이 다스림
+- 공국 : 귀족이 대스림, 왕국에 비해 권한 제한적
+
+036 르네상스 미술 4가지 특징
+- 유화의 발견 
+  - 이전에는 벽 위에 그리는 프레스코화, 나무판자 위에 그리는 템페라화가 전부
+- 원근법
+- 명암표현
+  - 소묘능력을 대학입시 잣대로 사용 (그만큼 중요함)
+- 피라미드 구조
+  - 그림을 그릴 때 구도를 생각했다는 점이 중요 : 그림을 학습도구가 아닌 아름다움을 표현하고자 함
+
+040 레오나르도 다빈치(이탈리아, 1452~1519)
+- 르네상스의 가치를 실현한 인물
+- 부유한 집안이었지만 사생아였기에 좋은 직업을 구하지 못함
+- 서른쯤에 밀라노에서 군사 기술자이자 건축가로 일하며 17년간 머물렀는데 이때 다양한 분야 접함
+- 시대의 천재였지만 끈기가 부족하여 시작을 해놓고 마무리된 게 많지 않았다
+- 모니리자 : 르네상스 시대의 네 가지 혁신을 모두 갖춘 그림 (프랑스 르부르 박물관)
+- 최후의 만찬 : 원근법 사용 예수님 부각, 3개의 창문, 작품 훼손이 많이됨
+
+044 미켈란젤로 부오나로티(이탈리아, 1475~1564)
+- 천재적인 재능과 차원이 다른 노력, 장수, 많은 작품 남김
+- 피렌체, 귀존의 후손, 부모님이 미술 반대했지만,,,
+- 메디치가문에 고용되었지만, 메디치가문이 피렌체이서 2년만에 추방됨
+- 피에타(조각상) : 교황의 요청으로 24세에 만듦, 정면 성모, 하느님의 시각에서는 예수님만 보임, 완전히 다른 구도가 보임
+- 천장화 (시스티나 대성당) (천지창조)
+  - 교황 요청으로 전창화 그리게 됨 (주위 반대 조각가인데)
+  - 미식축구장 1.5배(1000평방미터) (평방미터=제곱미터)
+  - 3개의 그룹 : 천지창조, 아담과 이브, 노아의 이야기
+- 최후의 심판 (시스티나 대성당)
+  - 천장화 그린후 20년 후 (1536~1541)
+  - 저질스러운 누드화 제거 요청 (예수와 성자들에게 속옷 입힘)
+  - 1994 복원시 속옷 제거 여부 논란 (속옷 그대로 둠)
+
+050 라파엘로 산치우(이탈리아, 1483~1520)
+- 그림이 온화하고 부드럽다. 몇 점만 보고나면 그의 화풍으로 인하여 라파엘로가 그린 그림인줄 분간해냄
+- 추기경의 조카와 약혼했으나 결혼하지 않음, 37세에 요절
+- 빵집 딸 마르게르타 루티
+- 바티칸 궁전 내부의 서명실 벽화 (4면 : 철학, 신학, 미학, 법학)
+- 바티칸 궁에 많은 성모 그림 : 마르게르타 얼굴로 그렸다고 함 
+- 라 포르나리나 : 외쪽 팔찌에 라파엘로라는 이름을 남겼고 약혼반지까지 있었다. 사후에 제자가 지웠지만, 2001년 복원시에 복원
+
 <br>
 
 
@@ -47,7 +100,7 @@
 
 ## **9. 모더니즘과 현대 미술(1920~)**
 
-164  관객의 입장에서 중요한 것은 이때부터 누군가의 도우 없이 혼자 그림을 보고, 느끼고, 감동하는 시대는 끝났다는 것이다
+164  관객의 입장에서 중요한 것은 이때부터 누군가의 도움 없이 혼자 그림을 보고, 느끼고, 감동하는 시대는 끝났다는 것이다
 
 164  초기 표현주의
 - 초기 표현주의까지만 해도 보고, 느끼고, 감동할 만한 그림이 나온다
@@ -56,5 +109,5 @@
   - 슬픔을 표현하는 본인의 그림에 우울증이 도움이 된다
   - 대표작 : 절규 (목판화로도 제작)
 
-241  미술사조 한 장에 요약하기
-미술사를 한 장에 요약하면 이해하기 쉬워진다. 선사시대 동국벽화를 시작으로 기원전후 로마 대제국이 찬란한 문화의 꽃을 피웠지만 기원후 400년 서로마가 멸망하고 1400년까지를 중세 암흑기라 한다. 중세에는 문맹률이 높아 성경을 가르체주는 교육용 그림이 많다. 십자군 전쟁과 페스트의 영향으로 교황의 지위가 약해지고 농민의 지위가 상승하며 경제적으로 나아지면서 화려했던 고대로 돌아가자는 르네상스(1400년) 시대가 열리고 유화의 발명, 원근법과 명암의 사용, 안정된 구도가 나타난다. 다빈치, 라파엘로, 미켈란젤로가 대표화가다. 르네상스의 엄격한 규율에 반대하여 과장된 화풍인 마니에리즘 시대(1500년)가 오고, 이어서 강한 명암이 특징인 바로크 시대(1660년)가 온다. 바로크 시대에는 카라바조, 램브란트, 벨라스케스, 베르메르가 대표화가다. 타락한 귀족에 의해 화려함과 사치스러운 로코코 시대(1720년)가 도래하지만 프랑스 혁명으로 이들을 처단하고 계몽주의적인 신고전주의(1780년)와 낭만주의가 나타난다. 형식에 얽매인 신고전주의에 반대하는 인상주의(1860년) 화가 마네, 모네, 드가, 피ㅏ로 같은 거장들이 탄생한다. 이들은 사실적인 자연의 빛을 표현하고 작가의 주관적인 시선을 그린다. 이보다 더 과감하고 투박해진 후기 인상주의(1880년)는 세잔, 고갱, 고흐 등과 같은 화가들이 주도한다. 1920년 근대로 오면서 사람의 감정을 그리는 뭉크와 클림트와 같은 표현주의가 유행하고, 굵고 거칠게 표현하는 마티스의 야수주의, 입체적인 그림을 그린 파카소가 탄생한다. 이는 추상화로 발전하였고, 물감을 뿌려 그리는 폴록의 액션 페이팅도 나타난다. 미로와 달리 샤갈 같은 화가는 초현실주의 그림을 그렸다. 최근에는 워홀이 팝 아트를 선보였고, 극사실주의와 설치 미술, 그래피티 아트와 같은 벽화도 유행한다.
+214  미술사조 한 장에 요약하기
+- 미술사를 한 장에 요약하면 이해하기 쉬워진다. 선사시대 동국벽화를 시작으로 기원전후 로마 대제국이 찬란한 문화의 꽃을 피웠지만 기원후 400년 서로마가 멸망하고 1400년까지를 중세 암흑기라 한다. 중세에는 문맹률이 높아 성경을 가르쳐주는 교육용 그림이 많다. 십자군 전쟁과 페스트의 영향으로 교황의 지위가 약해지고 농민의 지위가 상승하며 경제적으로 나아지면서 화려했던 고대로 돌아가자는 르네상스(1400년) 시대가 열리고 유화의 발명, 원근법과 명암의 사용, 안정된 구도가 나타난다. 다빈치, 라파엘로, 미켈란젤로가 대표화가다. 르네상스의 엄격한 규율에 반대하여 과장된 화풍인 마니에리즘 시대(1500년)가 오고, 이어서 강한 명암이 특징인 바로크 시대(1660년)가 온다. 바로크 시대에는 카라바조, 램브란트, 벨라스케스, 베르메르가 대표화가다. 타락한 귀족에 의해 화려함과 사치스러운 로코코 시대(1720년)가 도래하지만 프랑스 혁명으로 이들을 처단하고 계몽주의적인 신고전주의(1780년)와 낭만주의가 나타난다. 형식에 얽매인 신고전주의에 반대하는 인상주의(1860년) 화가 마네, 모네, 드가, 피가로 같은 거장들이 탄생한다. 이들은 사실적인 자연의 빛을 표현하고 작가의 주관적인 시선을 그린다. 이보다 더 과감하고 투박해진 후기 인상주의(1880년)는 세잔, 고갱, 고흐 등과 같은 화가들이 주도한다. 1920년 근대로 오면서 사람의 감정을 그리는 뭉크와 클림트와 같은 표현주의가 유행하고, 굵고 거칠게 표현하는 마티스의 야수주의, 입체적인 그림을 그린 파카소가 탄생한다. 이는 추상화로 발전하였고, 물감을 뿌려 그리는 폴록의 액션 페이팅도 나타난다. 미로와 달리 샤갈 같은 화가는 초현실주의 그림을 그렸다. 최근에는 워홀이 팝 아트를 선보였고, 극사실주의와 설치 미술, 그래피티 아트와 같은 벽화도 유행한다.
