--- a/eco/eco_0100.md
+++ b/eco/eco_0100.md
@@ -1,4 +1,6 @@
-# 문홍철 (연합뉴스, 20240126)
+# 연준_몸과 마음이 따로 노는 이유 (문홍철, 연합뉴스, 20240126)
+
+https://www.youtube.com/watch?v=eO0-OnRXerM
 
 주식 변동성 확대
 - 상해 스노우볼 옵션, 변동성 확대되는 방향
