--- a/book/book_0138.md
+++ b/book/book_0138.md
@@ -69,6 +69,22 @@
   - 통일신라 문화의 마지막 만개
   - 이후 왕권을 둘러싼 귀족들간의 다툼
   - 무열왕까지의 상대, 경덕왕까지의 종대, 나머지 하대
+  - 문화사적 변동의 흐름 : 완만히 상승하여 급속히 하강하는 포물선
   - 전제왕권을 기틀을 확립한 아번지인 성덕대왕의 위업을 기리는 엄청난 대종인 에밀레종 만듦
   - 아들을 얻기 위한 대불사를 일으킴
   - 선덕대왕신종, 불국사 모두 혜공왕때 완성
+
+- 불국토
+  - 불국토를 건축적으로 재현하는 것이었다. 따라서 이 절집의 돌 하나, 문 하나마다 그런 정신이 들어 있다
+  - 석축은 곧 천상의 세계로 오르는 벽이다. 그 정상이 수미산인데 범영루가 이를 의미한다
+    - 108명이 앉을 수 있다. (180번뇌)
+  - 천상에 오르는 백운교와 청운교는 33계단 (33천의 세계 : 도리천)
+
+- 추천코스
+  - 대웅전 정면으로 오르는 돌계단의 소맷돌 측명의 살짝 둥글린 곡선의 아름다움이다
+  - 석가탑의 탑날개 직선의 묘이다
+  - 석축의 그랭이법으로 자연석 위에 얹힌 장대선을 자연석 모양에 따라 깎은 것이다
+  - 극락전 안양문에서 연화교를 내려다보면서 연꽃 무뉘가 계단을 타고 내려가는 장면을 보늘 것이다
+  - 관음전에 올라 관음전 남쪽 기와담 너머로 보이는 회랑과 다보탑을 꼭 보여주는 것이다
+  - 불국사 서북쪽의 빈터에는 불국사 복원 때 사용되지 않은 석조 부재들
+  - 작은 일각문 너머 있는 뒷간에 다녀오는 일이다. ㄱ
