--- a/conhtml/C0000001.md
+++ b/conhtml/C0000001.md
@@ -2,12 +2,17 @@
 
 https://www.youtube.com/watch?v=6V6ZIAH5kBg : 김균형(센트럴서울안과 원장)
 
-NO 터치
-따뜻한 손으로 가볍게 만지는 것은 가능
+- 안과 (5가지)
+  - 전안부 : 백내장, 노안, 시력교정
+  - 망막 : 황반변성
+  - 시신경 : 녹내장
+  - 성형 : 눈꺼풀 등 주변부
+  - 사시 : Alignment
 
-배드민턴(복식-자기편), 망치, 제초, 밤송이
+- 주의 사항
+  - NO 터치 : 따뜻한 손으로 가볍게 만지는 것은 가능
+  - 위험사항 : 배드민턴(복식-자기편), 망치, 제초, 밤송이
 
-고근시 - 정기적인 검진 필요
+- 고근시 - 정기적인 검진 필요
 
-녹내장, 황반변성
-
+- 투자관련 설명
