--- a/conhtml/C0000002.md
+++ b/conhtml/C0000002.md
@@ -1,14 +1,45 @@
-노인내과
+## 노인내과 (정희원 : 아산병원)
 
-https://www.youtube.com/watch?v=R-5iYqeGXYQ  :  정희원, 서울아산병원 노년내과 교수
+### [삼프로TV : 24.07.20](https://www.youtube.com/watch?v=R-5iYqeGXYQ)  
 
 60대부터는 근력운동
-60대이후 간헐적 단식 안된다 : 체중은 빠진다. 근손실로 이어진다
+- 60대이후 간헐적 단식 안된다 : 체중은 빠진다. 근손실로 이어진다
 
-노인냄새 : 지질의 변화
-국부만 씻기 (중성 바디워시)
-건조피부염 - 가려움증 (보습제)
-명상 (감각/호흡을 느끼고) (멘털측면)
-산림욕도 좋다 (굳이 맨발이 필요없다)
-스트레칭운동 / 밸런스운동 (건강보조식품에 돈쓰지말고 운동(전문가도움)하는 것에 돈쓰자)
-인간은 내러티브에 약하다 (숫자로 설명하는 것보다)
+- 노인냄새 : 지질의 변화
+- 국부만 씻기 (중성 바디워시)
+- 건조피부염 - 가려움증 (보습제)
+- 명상 (감각/호흡을 느끼고) (멘털측면)
+- 산림욕도 좋다 (굳이 맨발이 필요없다)
+- 스트레칭운동 / 밸런스운동 (건강보조식품에 돈쓰지말고 운동(전문가도움)하는 것에 돈쓰자)
+- 인간은 내러티브에 약하다 (숫자로 설명하는 것보다)
+
+
+### [매불쇼 : 24.09.17](https://www.youtube.com/watch?v=SgQEZJPDYxU)
+
+저속노화식사법 : 책
+
+피부노화는 내재노화와 좀 다르다 : 겉모습의 젊은과 실제 젊음은 다르다
+
+건강수명 늘리자
+
+70% 생활습관, 30% 유전
+
+식습관, 운동, 수면, 스트레스, 술.담배, 중독, 사회적고립  (40세 기준 남섬 24년 차이)
+
+과식안한다. 붉은고기적게, 통곡물
+
+X 
+- 튀김(씨앗기름류별루, 올리브유제외) 
+- 단순당(콜라.사이다,쥬스)  
+- 정제분(정제된곡물): 밥,빵,떡,국수
+- 액상과당 : 간에서흡수, 지방간/내장지방,,,
+- 적색 가공육 먹지 마라
+
+조금씩만 바꿔 보자
+1 - 간식을 바꾸자
+- 간식시간 : 견과류, 베리류 (1개 150~180칼로리)
+- 하루 당분 15그램/일(콜라 150ml), 서울시 50그램/일
+- 2~4주 정도 변경 기간 : 처음에는 친해져야 한다 (냄새만 맡는 것만으로도 좀 더 친밀해짐)
+
+2 - 밥을 바꾸자
+- 콩을 많이 넣자 : 렌틸 (서리태)  -  심한 포만감으로 다른 것 안 먹는 효과
