--- a/book/CC202411101.md
+++ b/book/CC202411101.md
@@ -10,7 +10,9 @@
 
 <br>
 
-## 밥만 바꿔도 느리게 나이들 수 있다 (저속노화 식사법이란 무엇인가) 
+## 1. 밥만 바꿔도 느리게 나이들 수 있다 (저속노화 식사법이란 무엇인가) 
+
+### 우리는 지금 노화의 액셀러레이터를 밟고 있다
 022 인류는 진화적으로 단맛과 짠맛, 지방맛을 좋아하도록 설계되었다.
 - **단맛**은 에너지의 주요 공급원인 탄수화물, 특히 과일이나 꿀처럼 자연적으로 당이 풍부한 음식을 찾는 데 도움이 되었어. 
 - **짠맛**은 신체가 정상적으로 기능하는 데 필수적인 전해질을 공급받기 위해 필요했지. 과거엔 소금을 구하기가 어려웠으니, 자연스럽게 염분이 있는 음식을 선호하는 경향이 형성되었어. 마지막으로 
@@ -111,21 +113,74 @@ GPT. 인슐린 저항성 개선 방법
 
 034 오늘날 보통의 젊은 성인들은 부모 세대보다 일찍 만성질환을 겪으며 보다 오랜 기간 병을 앓을 가능성이 높다
 
+### 100세 시대, 핵심은 뇌 건강이다
+
+039 지중해식 식사 : 지중해 연안 국가인 그리스, 이탈리아, 스페인, 프랑스 등의 전통적인 식습관
+- 암, 심장질환, 당뇨병, 고혈압, 뇌졸증, 치매 등 만성질환의 위험을 감소, 적정 체중 유지 도움
+- 복합탄수화물, 식물성 단백질, 올리브오일 강조, 붉은 고기 피함
+
+040 대시 식사 : 고협압 예방 식단
+- 칼륨이 품부한 과일과 채소 권장, 나트륨 제한
+
+042 저속노화 식사 (MIND)
+- 지중해식과 다른 점 : 베리류, 푸른잎채소 권장
+- MIND 식사에서는 모든 과일을 자주 섭취할 것을 강조하지는 않고, 베리류오 ㅏ푸른잎채소의 섭취를 강조
+- 지줌해식 식사 + 올리브오일 보충 : 인지기능 개선 효과
+
+### 나이에 상관없이 젊음을 유지하고 싶다면
+
+052 MIND 식사법 점수표 (15점 만점)
+- 1점 높을 때마다 전체 치매와 알츠하이머 치매의 위험성이 10% 이상 감소
+- 뇌 건강에 좋은 식품 (자주 섭취 권장)
+  - 잎채소 (케일, 시금치 등): 주 6회 이상
+  - 기타 채소: 하루 1회 이상
+  - 견과류: 주 5회 이상
+  - 베리류 (블루베리, 딸기 등): 주 2회 이상
+  - 통곡물 (귀리, 퀴노아, 현미 등): 하루 3회 이상
+  - 생선: 주 1회 이상
+  - 콩류 (렌틸콩, 병아리콩 등): 주 4회 이상
+  - 가금류 (닭, 칠면조 등): 주 2회 이상
+  - 올리브유: 주로 사용하는 식용유로 사용
+  - 적포도주: 하루 1잔 (선택 사항)
+- 피해야 할 식품 (섭취 제한 권장)
+  - 붉은 고기 (소고기, 돼지고기): 주 3회 이하
+  - 버터와 마가린: 하루 1스푼 이하
+  - 치즈: 주 1회 이하
+  - 패스트푸드/초가공식품: 주 1회 이하
+  - 튀긴 음식: 주 1회 이하
+
+055 단순당, 정제곡물, 붉은 고기 모두 인슐린 분비를 유발하면 노화의 가속페달인 엠토르를 활성화한다
+- 콩으로 식물성 단백질을 많이 섭취하는 것으로 엠트로 억제 가능
+
+- 1형 당뇨병 : 인슐린 분비가 되지 않아서
+- 2형 당뇨병 : 인슐린 저항성으로 인해 혈당이 오르는 경우
+- 3형 당뇨병(?) : 치매 (치매의 위험성 2~5배 상승)
+
+### 식욕조절부터 혈당관리까지
+
+062 비만의 탄수화물-인슐린 모델
+- 높은 혈당 피크를 만드는 식품은 인슐린 분비를 일으키고 인슐린이 과도한 에너지를 지방으로 밀어넣는다
+- 인슐린 분비로 인해 혈당은 시작점보다 더 많이 떨어지는 현상이 발생하는데, 이때 스트레스 호르몬, 글루카곤 등이 역할을 수행하며 식욕은 폭발한다
+
+당지수 vs 당부하
+- 당지수 : 포도당 50g 섭취시 혈당 상승 속도 100, 특정 식품의 탄수화물을 같은 양으로 섭취한 후,,,
+- 당부하 : 당지수 * 1회 섭취량
+
 <br>
 
-## 작은 차이가 큰 변화를 만든다 (저속노화식 간단 실천법)
+## 2. 작은 차이가 큰 변화를 만든다 (저속노화식 간단 실천법)
 
 <br>
 
-## 노화의 가속페달을 멈추는, 올바른 탄.단.지 가이드 (잘 먹어야 약이 된다)
+## 3. 노화의 가속페달을 멈추는, 올바른 탄.단.지 가이드 (잘 먹어야 약이 된다)
 
 <br>
 
-## 저속노화 식사법 완전 정복 (사람들이 가장 궁금해한 Q&A 30)
+## 4. 저속노화 식사법 완전 정복 (사람들이 가장 궁금해한 Q&A 30)
 
 <br>
 
-## 건강하게 맛있는 일주일 저속노화 레시피 (자연 재료를 활용한 건강 밥상 21)
+## 5. 건강하게 맛있는 일주일 저속노화 레시피 (자연 재료를 활용한 건강 밥상 21)
 - 이건 참자.. ^^
 
 
