--- a/book/CC202411101.md
+++ b/book/CC202411101.md
@@ -170,6 +170,37 @@ GPT. 인슐린 저항성 개선 방법
 
 ## 2. 작은 차이가 큰 변화를 만든다 (저속노화식 간단 실천법)
 
+### 무엇을 더하고 무엇을 뺄 것인가
+
+072 고기와 도정된 곡물 올라온 밥상은 불과 1970년대까지만 하더라도 상당한 부유층만
+
+072 백미는 쌀의 섬유질이 제거된 상태이므로 부드럽게 씹히고 소화가 잘 될 뿐 아니라 맛도 좋다
+- 밥심으로 산다 : 고봉밥 (현미,보리,조,수수 섞임, 천천히 소화흡수되며 오랜 시간 배가 꺼지지 않음)
+
+074 2022년 육류소비량(58.4kg)이 쌀 소비량(55.6kg)보다 커짐
+
+076 MIND 점수를 올리는 몇 가지 전략
+- 흰쌀밥을 잡곡밥으로
+- 견과류를 매일 한 줌씩
+- 매주 두 번, 블루베리 한 줌씩 : 생을 권장, 대신 냉동, 건조는 다량 섭취않도록 주의 필요
+- 올리브오일을 주 요리용 기름으로
+- 당분 섭취하지 않기 : 간식은 견과류로
+- 붉은 고기 멀리하기
+- 패스트푸드 멀리하기
+
+GPT. 커피
+- MIND 식사법에서는 커피가 직접 포함되지는 않지만, 커피의 항산화 성분과 카페인은 적당히 섭취할 경우 인지 기능에 긍정적인 영향을 줄 수 있어
+- 위장장애 유발 가능
+  - 커피에 포함된 카페인과 산성 성분이 위산 분비를 자극
+  - 아침 식사후 커피 : 30분~1시간 이후 권장
+    - 철분 흡수 방해: 커피에 포함된 폴리페놀과 카페인은 식사에서 섭취한 철분의 흡수를 방해할 수 있어. 특히 철분 결핍이 있는 경우, 아침 식사 후 바로 커피를 마시는 것보다는 1시간 정도 지나고 마시는 게 좋아.
+    - 위산 분비: 식사 직후 커피를 마시면 위산 분비가 과도해질 수 있어 속 쓰림이나 위장 불편감을 유발할 수 있어. 위가 약한 사람이라면, 식후 잠시 기다렸다가 커피를 마시는 것이 좋지.
+    - 혈당 변동: 아침에 커피를 마시면 카페인이 일시적으로 혈당을 변동시킬 수 있어, 특히 인슐린 저항성이 있는 사람이라면 아침 식사 후 바로 커피를 마시는 걸 피하는 게 좋아.
+  - 점심후 커피는 아침보다는 덜 하지만 권장하지는 않음
+
+GPT. 생선류 - 오메가-3 섭취 위한 것
+- 오징어(X) : 콜레스테롤이 높은 것을 피함(치즈)
+- 아마씨/치아씨, 호두, 해조류 (스피루리나)
 <br>
 
 ## 3. 노화의 가속페달을 멈추는, 올바른 탄.단.지 가이드 (잘 먹어야 약이 된다)
