--- a/book/CC202411101.md
+++ b/book/CC202411101.md
@@ -201,6 +201,52 @@ GPT. 커피
 GPT. 생선류 - 오메가-3 섭취 위한 것
 - 오징어(X) : 콜레스테롤이 높은 것을 피함(치즈)
 - 아마씨/치아씨, 호두, 해조류 (스피루리나)
+
+### 밥만 바꿔도 쉬워진다
+
+084 흰쌀밥을 먹으면 혈당을 단순당에 필적할 만큼 빠르게 상승한다, 노화를 가속하는 인슐린과 엠토르가 더욱 활발하게 작동하기 시작한다
+- 탄수화물 양을 줄이는 방법 : 식사법
+- 탄수화물 흡수를 느리게 만드는 방법 : 식사법(통곡물 등)
+- 인슐린 저항성을 개선하고 탄수화물 처리능력을 좋게 만드는 방법 : 운동, 수면/스트레스관리
+
+086 카니보어(저탄고지 식단 중에서 동물성 식품을 주식으로하는 식단)
+- 닭 잡는 데 소 잡는 칼을 쓰는 느낌, 무탄수화물 식사까지 감행할 필요 없음
+
+087 콩류만 섞어도 밥이 달라진다
+- 대부분의 콩은 식물성 단백질이 많을 뿐 아니라 섬유질을 풍부하게 함유하고 있어서 당지수가 낮다 
+- 식물성 단백질과 다양한 비타민, 미네랄이 많아 채식주의자의 고기라고까지 불리는 렌틸콩
+
+089 단백질 섭취 권장량 (70kg)
+- 젊은 사람 : 0.8g/kg --> 56g
+- 근력운동하는 사람 / 효율 떨어지는 노인 : 1.2~1.5g/kg --> 84~105g (닭가슴살 100g : 단백질 30g)
+
+090 콩에 대한 우려 : 렉틴
+- 부작용 : 렉틴이 소화를 방해하거나 장벽을 자극해 복통, 설사, 메스꺼움 같은 증상이 나타날 수 있어. 세포에 결합해 장 흡수 과정을 방해하기 때문
+- 실제 코 섭취를 통한 렉틴의 양은 매우 적을 뿐 아니라 이는 조리 과정에서 거의 모두 소실 (삶기, 불리기, 압력솥)
+
+### 큰 변화를 만드는 '작은' 차이
+
+095 아침 공복에 올리브오일 커피
+- 스타벅스 : 올레아토 실험 실패, 부작용 호소하는 사람, 핵심사업에 집중 (올리브오일)
+- **방탄커피** : 기버터와 MCT오일
+
+099 완전식품이자 슈퍼푸드 **렌틸콩**
+- 렌틸콩은 탄수화물, 지방, 단백질, 비타민, 무기질 5대 영양소가 모두 충분히 들어간 완전식품
+- 렌틸콩의 식이섬유 함량은 같은 중량인 고구마의 열 배, 바나나의 열두 배
+- 렌틸콩 통조림
+
+### 건강한 체중 조절의 비밀
+
+105 노년기, 약간 통통한 것이 안전하다
+- 노년기(65세이상)에는 체중 감량을 하면 근육만 빠질 우려
+- 체질량지수 27kg/m2 이상의 비만이거나 대사질환이 물제가 되는 경우 등 의료진과 상의 후 결정
+
+106 기초대사량
+- 다양한 자연식 섭취를 주로 강조 (MIND)
+- 간단한 수식이 제공됨
+- 포만감 때문에 섭취가 어렵다면, 분리대두단백 세이크도 보조적으로 활용가능
+
+
 <br>
 
 ## 3. 노화의 가속페달을 멈추는, 올바른 탄.단.지 가이드 (잘 먹어야 약이 된다)
