--- a/book/CC202411101.md
+++ b/book/CC202411101.md
@@ -124,7 +124,7 @@ GPT. 인슐린 저항성 개선 방법
 
 042 저속노화 식사 (MIND)
 - 지중해식과 다른 점 : 베리류, 푸른잎채소 권장
-- MIND 식사에서는 모든 과일을 자주 섭취할 것을 강조하지는 않고, 베리류오 ㅏ푸른잎채소의 섭취를 강조
+- MIND 식사에서는 모든 과일을 자주 섭취할 것을 강조하지는 않고, 베리류와 푸른잎채소의 섭취를 강조
 - 지줌해식 식사 + 올리브오일 보충 : 인지기능 개선 효과
 
 ### 나이에 상관없이 젊음을 유지하고 싶다면
@@ -175,7 +175,7 @@ GPT. 인슐린 저항성 개선 방법
 072 고기와 도정된 곡물 올라온 밥상은 불과 1970년대까지만 하더라도 상당한 부유층만
 
 072 백미는 쌀의 섬유질이 제거된 상태이므로 부드럽게 씹히고 소화가 잘 될 뿐 아니라 맛도 좋다
-- 밥심으로 산다 : 고봉밥 (현미,보리,조,수수 섞임, 천천히 소화흡수되며 오랜 시간 배가 꺼지지 않음)
+- 밥심으로 산다 : 고봉밥 (현미,보리,조,수수 섞임, 천천히 소화흡수되며 오랜 시간 배가 꺼지지 않았음)
 
 074 2022년 육류소비량(58.4kg)이 쌀 소비량(55.6kg)보다 커짐
 
@@ -239,7 +239,7 @@ GPT. 생선류 - 오메가-3 섭취 위한 것
 
 105 노년기, 약간 통통한 것이 안전하다
 - 노년기(65세이상)에는 체중 감량을 하면 근육만 빠질 우려
-- 체질량지수 27kg/m2 이상의 비만이거나 대사질환이 물제가 되는 경우 등 의료진과 상의 후 결정
+- 체질량지수 27kg/m2 이상의 비만이거나 대사질환이 문제가 되는 경우 등 의료진과 상의 후 결정
 
 106 기초대사량
 - 다양한 자연식 섭취를 주로 강조 (MIND)
@@ -250,6 +250,48 @@ GPT. 생선류 - 오메가-3 섭취 위한 것
 <br>
 
 ## 3. 노화의 가속페달을 멈추는, 올바른 탄.단.지 가이드 (잘 먹어야 약이 된다)
+
+### 탄수화물, 모두 같지는 않다
+
+- 사람마다 체질도 다르게 놓인 상황도 달라서 좋은 탄수화물이 뭐라고 일괄적으로 말하기 어렵다
+- 119 느리게 소화되고 흡수되어 혈당 변동 폭을 적게 만들어주는 탄수화물, 포만감을 오래 유지해주며 식이섬유가 위장에서 좋은 미생물을 성장시켜줄 수 있는 탄수화물이 기본적으로 좋은 탄수화물이다
+- 122 백미와 밀가루는 현미와 통밀에 비해 당지수와 당부하가 현저히 높다
+- 122 빵, 떡, 국수 등 곡식을 갈아서 소화되기 쉽도록 가공하면 실제 흡수되는 속도는 더욱 빨라진다. 혈당 피크가 빠르게 이루어진다.
+- 표의 수치상으로 감자는 별로 고구마는 가능
+- 123 곡류인 현미부터 퀴노아까지는 대부분의 당지수가 50이상이지만, 콩류로 내려오면 당지수가 30 이하로 크게 떨어진다
+- 124 식품을 통한 항산화 성분의 다량 섭취는 질병 예방과 수명 연장에 도움이 되지만, 보충제를 통한 고용량 항산화 성분 섭취가 건강에 도움이 된다는 증거는 부족하다
+- 127 무슨 과일이든 결국 많이 먹으면 다량의 당분 섭취로 혈당을 올리고 전체 칼로리 섭취량도 높아진다. 주스 형태로 만들지 않고 그 자체로 섭취할 때 섬유질을 섭취하고 당분을 멀리할 수 있다. (주스를 만들어 먹으면 액상과당을 섭취하는 격)
+- 128 바쁜 현대인에게 과일은 선택지로 간주하지만, 과일을 섭취하는 것은 전반적인 건강에 도움이 될 뿐 아니라, 식사를 즐겁고 맛있게 만들 수 있는 방법이다
+
+### 어떤 지방을 먹어야 하는가
+
+- 렉틴 사태 : 과학적이고 논리적인 관점보다 한두 명의 사례나 개인적 경험이 회자되는 경우
+- MIND식사법에서의 3가지 원칙 : 요리용 기름으로 **올리브 오일**, **견과류**를 1주일에 5회 이상, 감자**튀김** 등 고열로 조리되거나 과자 등에 포함된 트랜스지방의 섭취 피하기
+- 포화지방 
+  - 최대한 수소와 결합
+  - 일반적으로 상온에서 고체로 존재(동물성(고기,치즈,버터), 일부 식물성(코코넛유,팜유))
+  - 확실한 악당 트랜스지방 발견으로 중립적이나 여전히 해로움
+- 불포화지방
+  - 한쪽 방향으로 수소와 결합, 상온에서 액체로 존재
+  - 단일불포화지방산 : 올리브오일, 아보카도오일
+  - 다중불포화지방산 : 생선, 카놀라유, 해바라기유 : 오메가3, 오메가6 (1:4섭취권장)
+  - 견과류는 단일과 다중 모두 함유 (단일:아몬드,캐슈넛, 다중:호두)
+  - 포화지방을 불포화지방으로 대체시 심혈과계질환 예방 
+- 트랜스지방
+  - 불포화지방에 수소화라는 인공적 과정으로 생성됨 (불포화지방이지만 수소의 방향이 반대로)
+  - 마가린, 쇼트닝, 고온에서 요리하는 과정(튀김)
+  - 트랜스지방 섭취는 지질 패턴을 나쁘게 만들 뿐 아니라 심현광계 질환에 의한 사망율 증가시킴
+  - MIND식사법에서는 튀김류나 패스트푸드를 일주일에 한 번 미만 권장(먹지말라는 얘기)
+- 오메가3, 오메가6는 필수 지방산이지만 음식을 통해서만 섭취 가능 
+- MCT오일
+  - 코코넛오일 : 포화지방, 소화와 흡수가 아주 빠르게 일어나서 에너지원으로 사용가능, 케톤체로 전환(금식상태 비슷한 : 항노화)
+  - 팜유 : 인슐린 저항성과 연관된다는 증거 불충분, 초가공식품에 사용, 권장하지 않음
+  
+- GPT 지방
+  - 포화지방 : 과도한 섭취시 혈중 LDL 높임  (직선형, 고체)
+  - 불포화지방 : HDL을 높이고 LDL을 낮춤  
+  - 트랜스지방 : LDL 수치를 높이고 HDL 수치를 낮춤
+  - ![지방구조](./CC202411101_지방구조.jpeg)
 
 <br>
 
