--- a/conhtml/CC202412011.md
+++ b/conhtml/CC202412011.md
@@ -11,6 +11,14 @@
   - **관점바꾸기 / 교훈찾기 / 감사하기 / ReFRAME**
   - 감사일기 쓰기 지속하면 안 좋은 일에 대응하는 힘이 생긴다
 
-- 기능의
-
+- 기능의학
+  - 마그네슘 (50% 부족)
+    - 다시마, 견과류, 시금치
+  - 코엔자임큐텐 : 고지혈증 약 투약시
+  - 비타민 : 생명을 유지시키는 아민
+    - 옛날 항해중 과일 없이 가다가 괴혈증으로 쓰러지기 시작함
+    - 오렌지를 먹고서 살아나다
+  - 비타민 D 
+    - 우리나라 사람들은 100% 부족
+    - 햇빛 통해서, 음식으로는 안된다. 단 하나 추천한다면 비타민D
 
