--- a/book/CC202411101.md
+++ b/book/CC202411101.md
@@ -272,28 +272,60 @@ GPT. 생선류 - 오메가-3 섭취 위한 것
   - 일반적으로 상온에서 고체로 존재(동물성(고기,치즈,버터), 일부 식물성(코코넛유,팜유))
   - 확실한 악당 트랜스지방 발견으로 중립적이나 여전히 해로움
 - 불포화지방
-  - 한쪽 방향으로 수소와 결합, 상온에서 액체로 존재
+  - 한쪽 방향으로 수소와 결합, 상온에서 액체로 존재 (식물성 기름으로 동물성 포화지방의 질감을 내도록 만드는 과정)
   - 단일불포화지방산 : 올리브오일, 아보카도오일
   - 다중불포화지방산 : 생선, 카놀라유, 해바라기유 : 오메가3, 오메가6 (1:4섭취권장)
   - 견과류는 단일과 다중 모두 함유 (단일:아몬드,캐슈넛, 다중:호두)
-  - 포화지방을 불포화지방으로 대체시 심혈과계질환 예방 
+  - 포화지방을 불포화지방으로 대체시 심혈관계질환 예방 
 - 트랜스지방
   - 불포화지방에 수소화라는 인공적 과정으로 생성됨 (불포화지방이지만 수소의 방향이 반대로)
-  - 마가린, 쇼트닝, 고온에서 요리하는 과정(튀김)
+  - 마가린, 쇼트닝, 고온에서 요리하는 과정(**튀김**)
   - 트랜스지방 섭취는 지질 패턴을 나쁘게 만들 뿐 아니라 심현광계 질환에 의한 사망율 증가시킴
   - MIND식사법에서는 튀김류나 패스트푸드를 일주일에 한 번 미만 권장(먹지말라는 얘기)
 - 오메가3, 오메가6는 필수 지방산이지만 음식을 통해서만 섭취 가능 
+- 씨앗기름 : 
+  - 해바라기유, 옥수수유 : 오메가6:오메가3의 비율이 현저하게 높다 
+    - 오메가6 필수 영양소지만, 많이 섭취시 염증 유발, 오메가3 흡수 방해
+  - 산화안정성 : 오래 기간 보관시, 조리시 (콩기름, 카놀라유는 낮음)
+  - GPT. 추천 : 기름은 올리브오일로, 생선은 자주 먹고, 간식으로 호두 챙기기
 - MCT오일
-  - 코코넛오일 : 포화지방, 소화와 흡수가 아주 빠르게 일어나서 에너지원으로 사용가능, 케톤체로 전환(금식상태 비슷한 : 항노화)
-  - 팜유 : 인슐린 저항성과 연관된다는 증거 불충분, 초가공식품에 사용, 권장하지 않음
-  
-- GPT 지방
+  - 소화와 흡수가 아주 빠르게 일어나서 에너지원으로 사용가능
+  - 코코넛오일 
+  - 팜유 : (코코넛오일과 비슷하지만 MCT오일이 거의 없음) 인슐린 저항성과 연관된다는 증거 불충분, 초가공식품에 사용, 권장하지 않음
+- GPT. 지방
   - 포화지방 : 과도한 섭취시 혈중 LDL 높임  (직선형, 고체)
   - 불포화지방 : HDL을 높이고 LDL을 낮춤  
   - 트랜스지방 : LDL 수치를 높이고 HDL 수치를 낮춤
   - ![지방구조](./CC202411101_지방구조.jpeg)
 
+### 단백질 섭취, 이것만 알면 된다
+
+- 143 단백질은 스무가지의 아미노산으로 구성되고, 이중 아홉 가지 필수아미노산은 사람이 체내에서 합성하지 못함
+  - 페넬알라닌, 발린, 트레오닌, 트립토판, 메티오닌, 류신, 이소류신, 라이신, 히스티딘
+- 144 단백질이 부족하면 근육량이 줄어들 우려가 있고, 면역세포의 기능이 저하되면, 피부나 모발 건강도 위협
+- 144 20대 여성, 노년기 인구 집단에서만 필요량 미만으로 섭취중
+- 145 근육량이 줄어들면 우리 몸의 대사 기능에도 악영향을 주어 당뇨병이나 비만, 고지혈증 등 만성질환의 조절이 보다 어려워진다 (근감소증은 2021년부터 질병으로 간주)
+- 147 동화 저항 : 동화 (작은벽돌(아미노산)으로 큰 구조물(근육) 만드는 과정)
+- 147 동화 저항 개선 방법
+  - 인슐린 저항성 개선 : 충분한 수면, 스트레스 관리, 금연, 절주
+  - 근력 운동 : 인슐린 저항성 개선뿐만 아니라 직접적으로 근육세포 내의 메커니즘 개선
+  - 필수아미노산(특히 류신)을 섭취하여 엠토르에 신호 주는 것 (과도하게 섭취하면 가속노화)
+  - GPT. 근력운동과 단백질섭취(특히, 운동직후)
+- 149 단순당과 정제곡물을 계속 섭취하면서 근손실이 생기는 것을 더 많은 고기나 더 많은 보충제 섭취
+  - 동물실험 결과는 인슐린 저항성이 더 악화되고 현간의 노화도 가속화되면 만성염증도 악화될 우려
+- 154 가공된 붉은 고기를 식물성 단백질로 교체하면 사망 위험이 0.66배
+- 155 (육식) 동화 저항으로 고생하는 60대 이상의 성인에게만 해당
+
+### 영양제로는 아무것도 해결할 수 없다
+
+- 157 채소와 과일에서 우리가 노리는 것은 섬유질과 미량영양소다
+- 159 채소나 과일 등의 식품으로 비타민C를 섭취하는 것은 폐암 발생 위험률이 18% 감소하는 것과 연관성이 있지만, 보충제 섭취로는 유의미한 효과가 관찰되지 않았다 (명승권, 20여건 분석)
+- 영양제 먹어야 하는 사람
+  - 의학적으로 명확한 경우 (철결핍증 등)
+  - 체중 감량을 위해 상당한 식이 제한 필요한 경우
+  - 노년기에 균형 잡힌 식단 위해 (식사량 줄고, 씹는 힘 떨일질 때)
 <br>
+
 
 ## 4. 저속노화 식사법 완전 정복 (사람들이 가장 궁금해한 Q&A 30)
 
