--- a/book/CC202412291.md
+++ b/book/CC202412291.md
@@ -4,8 +4,8 @@
 
 <br>
 
-### 0. 시작하며 (왜 공부하는가, 자신ㅏ의 답을 찾아서)
-- 배움이 그친 삶은 이미 끝나버린 삶과 다름이 없다. 깨달음 없는 살은 더 이상 살아갈 가치를 주지 못한다. 호기심이 멈춘 삶은 생생함이 사라진 삶이다. 공부 플랜이 없어진 삶은 미래에 대한 희망이 없어진 삶이다
+### 0. 시작하며 (왜 공부하는가, 자신의 답을 찾아서)
+- 배움이 그친 삶은 이미 끝나버린 삶과 다름이 없다. 깨달음 없는 삶은 더 이상 살아갈 가치를 주지 못한다. 호기심이 멈춘 삶은 생생함이 사라진 삶이다. 공부 플랜이 없어진 삶은 미래에 대한 희망이 없어진 삶이다
 - 건축과 도시 분야의 전문하는 일은 구조적으로 만년 '을'이다. 현실에서는 권력과 자본이라는 '갑'에 종속되는 운명이다. 권력과 자본은 정당치 못한 동기로 움직이는 경우가 많으니 그것을 분별하는 의식이 필요하다. (부정, 부폐, 부실, 비리) 사회의식이 높은 전문가가 되든가, 이권에 따라 움직이는 눈먼 전문가가 되든가
 
 <br>
@@ -13,23 +13,23 @@
 
 ### 1. 공부비상구론 (15살 나에게 공부는 비상구였다)
 
-- 남녀의 사랑은 관계의 근본이고 부부간의 신뢰는 인간 관계에 대한 신뢰의 근본이다. 부부 사이가 건강하면 가족이 건강하고 사회가 건강해진다. 자신도 모르게 부모의 삶의 태로를 닮아가는지도 모르겠다.
+- 남녀의 사랑은 관계의 근본이고 부부간의 신뢰는 인간 관계에 대한 신뢰의 근본이다. 부부 사이가 건강하면 가족이 건강하고 사회가 건강해진다. 자신도 모르게 부모의 삶의 태도를 닮아가는지도 모르겠다.
   - 불알을 차고 나왔더라면
   - 넌 참 이상하구나 -> 책의 세계로 도피
   - 경제적 독립을 꿈꾸다 -> 궁극적으로 모든 종류의 독립에 대한 자의식을 키우게 된다
 - 나의 사춘기를 꽉 채워졌던 책과 영화를 1년 동안 완전히 포기하고 공부만 한다는 결단을 내렸다
 - **결단하기보다 더 중요한, 독하게 결단한 것 지키기**
 - 이화여고는 '5%상'. 친구들은 눈이 둥그레졌고 내 눈은 더 둥그레졌다. 몰입하니까 뭔가 되는구나
-- 상대평가 시험 모드에 있다는 것은 별로 건강하지 못한 상태. 불행히도 시험 잘 치고 공부 요령이란 분명히 있고 자칫 그 요령에만 바지게 만들어 버린다
+- 상대평가 시험 모드에 있다는 것은 별로 건강하지 못한 상태. 불행히도 시험 잘 치고 공부 요령이란 분명히 있고 자칫 그 요령에만 빠지게 만들어 버린다
 - 시험 문제를 접하면 내가 그 문제를 풀고 못 풀고를 떠나서 이 문제를 왜 낼까가 보이는 단계에 접어들게 되었다.
-- 사람의 선택이란 결코 완벽한 정보를 기반으로 하는 것이 아니다 (잘 모르고 건축과를 선택, 800명의 3명중 휴학하지 않는 단 한 명)
+- 사람의 선택이란 결코 완벽한 정보를 기반으로 하는 것이 아니다 (잘 모르고 건축과를 선택, 800명 여자는 단 3명 /  휴학하지 않는 단 한 명)
 - 내가 선택하는 것이라면, 아무리 힘든 선택도 믿어주셨다 "'지가 알아서 하는건데', '지가 하고 싶어서 하는건데', '지가 하겠다'고 하는데, 뭐,,,"
 - 서울대의 경쟁적이고 모래알 같은 분위기에 대한 아쉬움과 함께 서로 나누고 격려해주는 공동체에 대한 부러움이 들 때가 있다.
-- 대학을 봉쇄하는 위수령, 계엄렴이 떨어지던 유신 전후의 엄혹했던 시절이다. 무뉘만 대학생. 그렇게 공부 안하고도 졸업한다는 것이 믿기지 않을 정도였다.
+- 대학을 봉쇄하는 위수령, 계엄령이 떨어지던 유신 전후의 엄혹했던 시절이다. 무뉘만 대학생. 그렇게 공부 안하고도 졸업한다는 것이 믿기지 않을 정도였다.
 - 내가 서울공대에 남겼다는 이른바 전설은 남자 화장실을 같이 쓰더라는 사실이었다. 나는 이 태도를 무척 반성하고 있다. 나의 생존술은 나를 위해서는 역할을 했지만, 왜 좀 더 우리를 위해 적극적으로 나서지 않았을까 하는 반성이다 (여자 화장실 만들어 주세요) 더 큰 용기가 필요한 것임을 나중에야 깨달았다
-- 남녀평등이 상식화된 선진 사회에서도 그리 다르지 않다. 용기는 절박한 사람이 절박할 때 우러나는 것이다
+- 남녀평등이 상식화된 선진 사회에서도 그리 다르지 않다. **용기는 절박한 사람이 절박할 때 우러나는 것이다**
 - 이력서 쓰기, 직장 구하기 등 활동을 하기 위하여 자발적으로 모여서 선배 욕, 회사 욕, 동료 욕, 자신의 능력 비판, 프리젠테이션 회의 등을 하며 피어 멘토링(동료)을 하는 젊은 세대들을 보면 참으로 현명하다 싶다
-- 호의적 차별(커리어를 쌓으려면 꼭 해야 할 어렵고 피곤한 일)을 은근히 즐기다가 자침 안주해 버리는 위험
+- 호의적 차별(커리어를 쌓으려면 꼭 해야 할 어렵고 피곤한 일)을 은근히 즐기다가 자칫 안주해 버리는 위험
 - 도시 구상 작업에 참여하면서 통상적인 건축의 틀을 넘어서 시야가 넓어졌을 뿐 아니라, 무엇보다도 팀 작업에 대해서 완전히 새로운 경험을 하게 되었다
 - 각자의 선택을 존중한다. 상대의 커리어를 존중한다. 도움은 못 될지언정 방해가 되지는 말자
 
@@ -46,7 +46,7 @@
 - 첫째는 **문제 창조 정신**
   - 사람들은 문제 해결 능력을 강조하지만 문제를 잘 설정하는 것이 훨씬 더 중요하다. 문제 자체에 해결의 단서가 녹아 있기 때문이다.
   -  Design Your Problem
-  -  왜 그 문제가 당신에게 절실한지 가승으로 짚어봐라
+  -  왜 그 문제가 당신에게 절실한지 가슴으로 짚어봐라
 - 둘째. 현장 정신, 셋째 창업 정신
 - 학생들과 이야기하면 여러 생각들이 나서 즐겁다. 학생들의 아직 순진한, 아마추어적인 질문에서 초심을 자극하는 생각을 발견하는 것도 능력이다
 - 그 디렉터는 일종의 연구 디렉터로써 정식 교수직도 아니지만 계속해서 새로운 프로젝트를 발굴하고 세미나 형식으로 학생들과 만나고 연구자들을 키워왔는데 조용해 보이는 가운데 움직임을 만들어내고 기회를 포착해서 실제 프로젝트를 만드는 운영방식이 놀라웠다
@@ -59,4 +59,65 @@
 <br>
 
 
-### 4. 저속노화 식사법 완전 정복 (사람들이 가장 궁금해한 Q&A 30)
+### 3. 공부실천론 (프로로 일하는 인생)
+- 박사의 역량은 딱 두 가지다. 하나는 지식 체계를 조감하는 역량(넓은 역량), 다른 하나는 자신이 설정한 문제를 속속들이 푸는 역량이다 (깊은 역량)
+- 국토부 산하 공사의 관료주의적 관행과 연구원의 진취적인 마인드는 끊임없이 부딪친다. (학계의 진보적 이상론 vs 관료사회의 보수적 현실론)
+- 나라는 인간이 소모된다는 느낌. 나의 에너지를 낭비하고 있다는 는낌. 나의 활동에 구속을 받는다는 느낌 등
+- 단언한다. 창업은 최고의 공부다
+- 창업은 가장 피가 되고 살이 되는 체험이다. 성공/실패가 중요치는 않다. 실패한 경험조차도 피가 되고 살이 된다. 자신이 세운 업은 온전히 자신의 책임이니 절박하기 짝이 없고, 절박한만큼 적극적이 되고 책임감이 더 높아진다.
+- 거부권/선택권이란 을의 근본적인 권리다. 이 자유를 잘 행사하면서도 생존할 수 있다면, 을의 입장도 썩 괜찮을 수 있다.
+- 대운하 사례 (독일) : 독일은 이미 환경 재앙 때문에 준설 자체를 법으로 금지하고 있는 나라다. 강물을 식수로 사용하지 않고 지하수를 마신다. 홍수 피해가 늘고 강 유지관리비가 너무 많고 농업생산성이 30% 떨어졌다.
+- 프로 생할에서 꼭 한번은 미치도록 빠지는 1년을 권한다.
+- 사회 생활을 하다 보면 시간은 쪼개지고 관심은 분산되고 몰입은 어려워진다.
+- 서울이라는 거대도시를 하나의 개념으로 묶어낼 수 있는 의미 있는 작업이었다. (유학 중에 생겼던 우리 사회와의 거리를 단숨에 좁힐 수 있었다)
+- 각 도시는 자신만의 현장성이 있고 이슈에 집중해야 한다고 강조하지만, 현실적으로 서울을 벤치마킹하는 것은 지방 도시들에게 자연스러운 현상이다
+- 프로의 생활이란 비우고 채우고를 생각하기는 커녕 대부분 일에 치여버린다.
+- 하기 싫어도 해야 하는 일이 할 때, 나는 배울 것 한 가지를 아예 미리 정해놓는다
+- 일에 빠지는 동시에 잠시 전체를 조감해 보는 순간을 가져야 한다 (자신이 하는 일에 대해서 객관화시키는 태도)
+- **나만의 나의 프로젝트 리스트를 가지고 있자**
+- 자신만을 위한 시간을 가지자 (새벽 2시간 or 저녁)
+- **매너리즘에 빠지지 말자**
+  - 이미 아는 것에만 안주하지 마라. 잘 할 수 있는 일만 하려들지 마라. 하던 대로만 하지 마라.
+- 우리는 일 기계도 못 되거니와 더우이나 공부에서는 절대로 될 수 없다
+- 물리적 수명은 길어지고 기능적 수명은 점점 짧아지는 패러독스를 안고 살아야 한다.
+
+<br>
+
+
+### 4. 공부놀이론 (공부는 놀이처럼, 놀이는 공부처럼)
+- 균형 잡힌 공교육보다 시험 대비 사교육이 지나치게 많아진 탓이다. 놀기란 마치 죽자고 공부를 해야 겨우 얻어내는 보상처럼 되어버렸다
+- **놀이효과는 잠효과와 비슷하다**
+- 왜 공부하는가에 대한 자신만의동기를 찾는 것만큼 효과적인 동력은 없을 것이다
+- (AFKN) 영어 방송이니 아예 소리로만 들려서 공부하는데 ㅈ혀 방해가 되지 않는 완벽한 묘수였다
+- '휴'에서 멈춤이 생기고, 새로운 자극이 생기며, 모험이 일어나고, 새로운 시작을 할 마음도 생긴다
+- 유신 시절, 대학 문을 닫아버리는 마감에 공부는 제대로 못한 대신에 우리나라 방방곡곡을 찾아다녔다
+- 여행이란 가족을 엮어주는 추억이다
+- 아무리 책과 사진과 영상을 통해서 간접 체험을 하더라도 실제 그 공간에 가면 완벽하게 다르다
+- (첫 책 산 기억)'괴도 루팡'을 사들고 집에 걸어오던 길은 영화 장면처럼 생생하게 가억난다. 가슴 설례며 뿌듯했고, 내 자신이 아주 멋지게 느껴졌다
+- (글쓰기는) 나의 프로 생활에 대하여 객관적인 관찰을 하고 있는 나를 느낀다
+- 주변 세계의 현상을 자세히 관찰하고 사람들의 행위를 예의 관찰하고, 무엇보다도 나 자신을 관찰하는 습성이 되었다. 나의 인생은 훨씬 더 풍부해졌고 또 정교해졌다
+- 얼마나 뜻있는 프로젝트로 만드느냐 하는 의문을 풀어가는 때에는 역시 공부가 도움이 된다
+  
+<br>
+
+
+### 5. 훈련공부론 (팀워크가 최고다)
+- 팀은 전체는 부분의 합보다 크다는 개념을 성취하는 팀워크를 해나가면 좋겠다.
+- 자신의 동기를 지니고 있는 사람과 남이 부여한 모적만 따라하는 사람과의 차이는 엄청나다
+- 높은 지위의 사람이 직접 나서서 일하면 같이 일하는 사람들이 얼마나 힘들어 하는지... (국회의원시절 보좌관)
+- 각자의 기량이 높아졌고 기개도 드높아졌지만, 어떤 방향성의 관점에서 일하느냐에 따라서 그 기량을 제대로 못 써먹고 기개도 제대로 못 펼칠 위험이 높다
+- 가장 좋은 공부는 역시 일하는 현장을 통해 이루어진다. 직접 계획을 짜고 실행해보고, 성공과 실패를 거듭하고, 익숙하지 않던 방식을 접해보고, 수많은 변수들이 예측불허하게 펼쳐지는 현장에 대응하며, 변화를 파악하고 그 변화를 대하는 방식을 새로 짜고 실천을 모색하며 머리를 맞대고 고심하고, 각자 맡은 바 역할을 해내고 서로 비판도 하면서 그 결과를 평가하는 과정을 통해 새록새록 배우게 되는 것이다.
+- 우리는 성공담보다는 실패담을 더 많이 이야기해야 하고, 기꺼이 무용담을 이야기하고, 권투기와 분투기를 써야 하며, 훈련담을 논해야 한다
+- 사회 안정성은 점점 더 흔들릴 것이다
+  - 변화 속도 빠르다. 저성장사회 도라. 노등은 대체 가능한 것. 빈부격차 확대. 사회안전망 잘 작동하지 않음
+- 자신의 유연성을 높이는 것은 우리 자신이 해야 할 일이다. 지금하는 일에 숙달되었다고 생각되면 이제 떠날 때가 되었고 다른 일을 찾을 때가 되었다.
+- 나는 손목리더십이라는 말을 자주 한다
+  - 손목은 손가락들이 자유자재로 움직일 수 있도록 받쳐주는 역할을 하고 흩어지지 않도록 중심을 세워준다
+  - 흩어지지 않도록 중심을 세워주고 사람들이 자유자재로 스스로 움직이도록 함
+- 리더십이란 단어는 리더의 지휘력뿐 아니라 리더 그룹을 지칭하는 것이다. 지도적 위치에 있는 지도부가 표현하면 정확할 것이다
+- 지위에 취하다(허영심 가득) 보면 권위만 내세우고 공부를 게을리하다가 금방 속 빈 강정이 되어버린다
+- **착하고 유능하게**
+  - 세상 돌아가는 매커니즘을 알고 대응해야 한다
+  - 돈감각, 경영감각, 거시경제감각을 갖고 있어야 설득력 있는 대안을 만들 수 있다
+  - 추진력은 필수다
+  - 친구와 동료를 넓히는 소통력을 기르자
