--- a/my/my_0130.md
+++ b/my/my_0130.md
@@ -1,17 +1,33 @@
 # 투자
 
-## 금리
+## #미국금리 전망
 
-[FEDWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html)
-
-[국가통계포털](https://kosis.kr/index/index.do)
-- 명목GDP : 2150조
-
-
+[##FEDWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html)
 
 <br><br> 
 
-## 부동산 시세
+## #투자 기초 지수
+### ##GDP
+[국가통계포털](https://kosis.kr/index/index.do)
+- 실질GDP : 2,288조 (2024년)
+- 명목GDP : 2,401조 (2023년)
+
+<br>
+
+### ##M2(광의통화)
+[국가통계포털](https://kosis.kr/index/index.do)
+- 광의통화(M2,평잔) : 4,146조 (2024.11)
+
+<br>
+
+### ##시가총액 : 종합정보(일)
+[KRX정보데이터시스템](http://data.krx.co.kr/contents/MDC/MDI/mdiLoader/index.cmd?menuId=MDC0201)
+- 시가총액(유가증권+코스닥+코넥스) : 2,443조 (25.1.24)
+
+<br><br> 
+
+
+## #부동산 시세
 
 [KB부동산](https://kbland.kr/)
 
@@ -24,3 +40,53 @@
 <br><br> 
 
 
+## #자산배분
+- 김영철 : 금10, 비트코인5, 브라질국채30, 물가채10
+- 유동원(유안타, 24.12.25) : 주식80, 채권20(가상+금5
+- 국민연금이 리밸런싱할 때 따라하자
+- 윤지호(25.01) 
+  - 떨어지면 사자 (상반기)
+  - Hold (하반기)
+- 
+- 신한 (금) : 원화 투자만 되네
+- ETN.ETF 세금 있네.
+- 이더리움의 속도를 개선한 것 : 솔라나
+-  
+- 시간이 지나면, 그 순간의 영감은 사라지고 쓰레기가 된다. 빨리 정리하고 영감을 남기자. 물론 그것 또한 시간이 지나면 사라지겠지만 (25.1.25)
+
+- 지금의 나와 10초전의 나는 다르다
+  - 선택의 순간 했던 마음으로 다시 생각하고 행동하자
+
+- Risk는 내가 가지는 것이 아니다
+  - 조그마한 위험이라도 있는 것은 회피하자 (? 잘 해석해야 함)
+
+- 어디에서 들었는지는 모르겠다
+  - 기적은 하느님 마음이다 (들어주거나 말거나)
+  - 간절히 기도하면 나의 생활태도가 바뀐다
+
+
+### 기억하기
+  - 바로 기억 : 죽으려는 기억 되살리기
+  - 일기 쓰기 : 손글씨로 : 일정 + 감정
+  - 낯선 단어 5개 외우기
+  - 운동 : 순서 있는 운동 (댄스)
+  - 식단 : 규칙적, 균형적
+
+### 파시즘
+- 공포는 공포를 제압할 수 없다
+- 뿌리부터 제거해야 한다. 쉽지 않다
+- 파시즘의 출현 
+  - 광장에서 폭력 출현
+  - 확인 불가능한 것이 매개로 움직임
+  - 단순화시킨다. 강자와 약자로. 자신의 강자의 편에 서기 위해서
+  - 단순하면 매력적으로 보인다
+  - 최초의 희망을 잃은 세대 : 처음 등장한 세대
+
+### 다큐멘터리 : 집에서 죽겠습니다.
+- 일본. 우에노 히즈코 : 여성학자에서 노인사회학자로
+- 가족 피해 줄이기 위해서 시설로 들어간다
+- 2020 독거세대 38%
+- 간병보험 : 방문진료, 재택간호율 높아짐
+- 문제행동을 보일때, 즉시 고치는 것이 좋을까? (장애와 함께 살아가야 할 수도)
+- 즐거운 주간보호시설
+- 느슨한 친구
