--- a/book/CC202002230.md
+++ b/book/CC202002230.md
@@ -8,25 +8,28 @@
 
 <br>
 
-### 다른 사람들하고 같이 사는 법
+### 1. 다른 사람들하고 같이 사는 법
 
  - 015 살아 있는 한 곤란하게 돼 있어, 살아 있는 한 무조건 곤란해
  - 016 생각하지 말라고 하면 할수록 자꾸 생각남 (노력으로 안된다. 그냥 받아들이자)
  - 그냥 맘편하게 나의 이야기를 들어줄 수 있는 사람이 필요함 (이것만으로도 위로가 된다)
  - 044 내가 소중하게 생각하는, 나를 소중하게 생각하는 사람들하고만 좋은 과계를 누릴 수 있어도 그 인생은 성공한 인생이다
  - 051 칭찬은 특정한 특성 몇 가지를 향한 것이지만 사람은 그 사람의 장점과 단점 모두를 아우른다
- - 077 앞으로는 더 모를 거야. 눈에 보이는 거랑 지금 아는 것만 알고 있으면 되는 거야
+ - 063 내가 싫어하는 사람을 잘 살펴보면 그 안에 내 모습이 있다
+ - 075 내 편을 들어주지 않는 엄마에게 내가 겪은 일이나 감정에 대해 이야기하지 않는 습관이 생겼다
+ - 078 모르면 알아가면 된다. 하지만 안다고 해서 그게 꼭 진실인 것은 아니다
 
-### 꿈없이도 살 수 있으면 어른
 
- - 항상 재미를 추구하는 홰내기 <--> 아무 일 없는 것을 확인하기 위해 걷는 야옹이 형
+### 2. 꿈없이도 살 수 있으면 어른
+
+ - 102 가슴이 미어진다. 우리 할머니가 너무 보고 싶어서 / 추억을 떠나 보낼 각오
  - 105 노인네들하고 한 약속은 잊어버리는 거 아냐. 노인네들에게는 지금뿐이라고
+ - 111 오히려 매일같이 꾸준하게 해온 일일수록 한 번 난 구멍이 더 크게 느껴진다
  - 125 누군가를 돕는 건 엄청 부자연스러운 일이야. 그 부자연스러운 짓을 부모가 되면 평생 해야만 하는 거야
  - 129 머리가 벗겨지는 건 쉬워. 그걸 포기하는 게 어려운 거야
 
 
-
-### 인생에서 이기는 건 뭐고 지는 건 뭘까
+### 3. 인생에서 이기는 건 뭐고 지는 건 뭘까
 
  - 146 공부도 하던 사람이 하는 거라는 것, 시간과 돈만 있다면, 배우고 싶은 것만 배우면서 살고 싶다는 말도 아무나 하면 안 되는 거였다.
  - 156 아가야, 아빠는 또 야옹이 형에게 졌단다. (불행도 나의 인생이라는 사실을 외면하지 말자)
@@ -37,7 +40,8 @@
  - 186 노력하면 이루어진다라는 말만큼 비현실적인 말이 있을까
  - 189 포로리, 낫지 않아도 괜찮아. 낫게 해주지 않아도 괜찮단다. (간병하는 아들을 보고)
 
-### 솔직해지는 순간 세상은 조금 변한다
+
+### 4. 솔직해지는 순간 세상은 조금 변한다
 
  - 204 소심한 성격 극복하기 위해 소심하지 않은 척 과장되게 행동해 봄,,,
  - 210 몬짱의 아버지가 부러웠어, 나에겐 좃아하는 것보다 중요한 게 있어어 (너부리의 순애보)
@@ -45,7 +49,7 @@
  - 220 고래아저씨는 상처투성이였다.
  - 224 못하는 건 말이다. 얼마나 못 하는지로 정해지는 게 아냐. 얼마나 하고 싶은지로 정해지는 거야 (나무타기 보노보노)
 
-### 완벽함보다 충분함
+### 5. 완벽함보다 충분함
 
  - 268 집이 없어도 골란하지 않지? 곤란하지 않다면 분명 필요 없는 거야 (애써 만든 집이 바닷물 속으로 사라짐)
  - 취미를 핑계로 놀이하는 것
