--- a/book/CC202002230.md
+++ b/book/CC202002230.md
@@ -1,8 +1,8 @@
-# 보노보노처럼 살다니 다행이야
+# 보노보노처럼 살다니 다행이야 (XXX)
 
 - 초판 4쇄 발행일 2017.04.26,  지은이:김신회,  그린이:이가라시 미키오  펴낸곳:다산북스
 
-- 버전3. 25.02.09 : 불현듯 보노보노를 보고 싶다는
+- 버전3. 25.02.09 : 불현듯 보노보노를 보고 싶다는 (3장까지만 하고 XXX하다)
 - 버전2. 18.08.03 : 나머지 반
 - 버전1. 18.06.09
 
@@ -13,8 +13,8 @@
  - 015 살아 있는 한 곤란하게 돼 있어, 살아 있는 한 무조건 곤란해
  - 016 생각하지 말라고 하면 할수록 자꾸 생각남 (노력으로 안된다. 그냥 받아들이자)
  - 그냥 맘편하게 나의 이야기를 들어줄 수 있는 사람이 필요함 (이것만으로도 위로가 된다)
- - 044 내가 소중하게 생각하는, 나를 소중하게 생각하는 사람들하고만 좋은 과계를 누릴 수 있어도 그 인생은 성공한 인생이다
- - 051 칭찬은 특정한 특성 몇 가지를 향한 것이지만 사람은 그 사람의 장점과 단점 모두를 아우른다
+ - 044 내가 소중하게 생각하는, 나를 소중하게 생각하는 사람들하고만 좋은 관계를 누릴 수 있어도 그 인생은 성공한 인생이다
+ - 051 칭찬은 특정한 특성 몇 가지를 향한 것이지만 사랑은 그 사람의 장점과 단점 모두를 아우른다
  - 063 내가 싫어하는 사람을 잘 살펴보면 그 안에 내 모습이 있다
  - 075 내 편을 들어주지 않는 엄마에게 내가 겪은 일이나 감정에 대해 이야기하지 않는 습관이 생겼다
  - 078 모르면 알아가면 된다. 하지만 안다고 해서 그게 꼭 진실인 것은 아니다
@@ -31,14 +31,15 @@
 
 ### 3. 인생에서 이기는 건 뭐고 지는 건 뭘까
 
- - 146 공부도 하던 사람이 하는 거라는 것, 시간과 돈만 있다면, 배우고 싶은 것만 배우면서 살고 싶다는 말도 아무나 하면 안 되는 거였다.
+ - 147 하기만 하면 뭐든 할 수 있는 사람이라는 이상한 자만심 (해보고 느끼자, 공부가 좋아질지 싫어질지)
  - 156 아가야, 아빠는 또 야옹이 형에게 졌단다. (불행도 나의 인생이라는 사실을 외면하지 말자)
- - 162 중학생이 교실에서 혼자 밥을 먹는 것. 어쩌면 그건 나는 패배자라는 것을 만방에 알리는 행위였기에,,,
+ - 157 성공하는 법에 대해서만 이야기할 뿐 넘어진 사람은 어떻게 살아야 하는지에 대해서는 이야기해주지 않는다
  - 173 관계 중독을 끊기 위해서는 잠시 관계로부터 벗어나 있어야 한다는 것 (남들과의 관계를 통해서만 자신을 바라볼 수 있는 사람)
  - 178 영화 "더 스토리" 소개
  - 180 열정을 구체화하는 데 가장 효과적인 방법은 뭘 하고 싶은지를 아는 것만큼이나 뭘 잘하는지를 아는 것 (되고 싶은 게 있다는 건 지금의 자신이 싫다는 거잖아)
  - 186 노력하면 이루어진다라는 말만큼 비현실적인 말이 있을까
  - 189 포로리, 낫지 않아도 괜찮아. 낫게 해주지 않아도 괜찮단다. (간병하는 아들을 보고)
+ - 190 불가능한 일에 힘을 빼는 대신, 가능한 것에만 집중하는 일상을 살게 되었다
 
 
 ### 4. 솔직해지는 순간 세상은 조금 변한다
@@ -51,7 +52,7 @@
 
 ### 5. 완벽함보다 충분함
 
- - 268 집이 없어도 골란하지 않지? 곤란하지 않다면 분명 필요 없는 거야 (애써 만든 집이 바닷물 속으로 사라짐)
+ - 268 집이 없어도 곤란하지 않지? 곤란하지 않다면 분명 필요 없는 거야 (애써 만든 집이 바닷물 속으로 사라짐)
  - 취미를 핑계로 놀이하는 것
  - 287 갑자기 불행과 맞닥뜨리더라도 계속 가는 거야
  - 298 자원봉사는 누군가를 돕는 일로 보람을 느끼는 일이 아니라 아무것도 할 줄 아는 게 없다는 사실을 실감하는 일이었다
