--- a/book/CC202502161.md
+++ b/book/CC202502161.md
@@ -63,10 +63,21 @@
 - "이야기의 힘"을 느낌 / 좋아하는 것만 찾아다니던 성격이 점점 바뀌고, 더 많은 곳에 가보자하는 마음이 생겼지요
 
 #### F.2 인간의 살이야말로 가장 큰 이야기다
-- 어느덧 결혼한 지 30ㄴ이 지나고, 슬슬 자식이 결혼할 나이가 되니 아버지와 어머니가 부모였던 때의 기분이 더 잘 이해되었습니다.
+- 어느덧 결혼한 지 30년이 지나고, 슬슬 자식이 결혼할 나이가 되니 아버지와 어머니가 부모였던 때의 기분이 더 잘 이해되었습니다.
 
 
 #### G.1 노인이 되어서도 글을 쓰고 싶어요
-- (I 아이
+- 7분 정도의 곡인데 제가 반을 만들어 보냈으니, 나머지를 쇼타 상이 어떤 노랫말로 채울지 흥미진진 기대가 됩니다. (재밌게 작업하네)
+- (엑스트라) 영화에 나오는 3분 외에 어떤 삶을 살고 있었을지 궁금하더라구요. (남에게 보여지지 않는 우리들의 일상)
+- (이창동감독) 아무도 나한테 커피를 마시자고 안해서 학교에 커피숍이 있었는지 몰랐어
 
 #### G.2 제가 생각하는 3대 스트레스는 첫번째가 돈, 두번째가 병, 세번째가 마감이예요
+- (블쉿 잡) 데이비드 그레이버, 아나키스트, 자본주의/민주주의/소비사회로 인한 문제점, 이 문제를 해결하는 것이 존재한다.
+
+
+#### H.1 훔치는 건 자유로운 행동에 포함될까요
+- 대학생 때 버려진 학교 건물을 스쾃팅(squatting)한 적이 있습니다
+- 학자금 대출을 갚은 뒤 너무 기뻐서 가족들에게 이야기하니, 이제 전세 대출을 받을 차례군
+
+#### H.2 여차하면 다들 도망가
+- 보노보노 35년 동안 46권
