--- a/book/CC202002230.md
+++ b/book/CC202002230.md
@@ -1,8 +1,8 @@
-# 보노보노처럼 살다니 다행이야 (XXX)
+# 보노보노처럼 살다니 다행이야 (v3, 25.02.09)
 
 - 초판 4쇄 발행일 2017.04.26,  지은이:김신회,  그린이:이가라시 미키오  펴낸곳:다산북스
 
-- 버전3. 25.02.09 : 불현듯 보노보노를 보고 싶다는 (3장까지만 하고 XXX하다)
+- 버전3. 25.02.09 : 불현듯 보노보노를 보고 싶다는 (3장까지만 하고 멈추다)
 - 버전2. 18.08.03 : 나머지 반
 - 버전1. 18.06.09
 
