--- a/conhtml/CC202504132.md
+++ b/conhtml/CC202504132.md
@@ -1,6 +1,6 @@
 ## ChatGPT 업무혁신 바이블
 
-### 1. INTRO
+### 0. INTRO
   - 영화 : 인타임 (시간이 돈이다. 디스토피아. 돈을 벌어서 시간을 사다)
   - 보안이 있는 상황에서도 활용할 수 있는 방법
   - 코딩을 **시작**할 수 있는 능력만 있으면 됨
@@ -21,3 +21,47 @@
   - 폐쇄망에서도 수행됨 
   - Pre-Trained : Fine Tunning 거침
   - 환각효과(Hallucination)을 줄이기 위해 RAG(검색증강)을 활용 : 알고리즘의 특성상 100%는 안됨
+<br>
+
+### 2. NoCode : 생각의 확장
+- 프롬프트 엔지니어링에 대한 논문 : 2022.11.30 ChatGPT가 나온 이후에 만든 논문이 대부분
+- 명령어 + 맥락 + 입력물 + 출력물
+- 앤드류 응 : 4대 AI 석학
+  - 명확한 지시
+  - zero / few shot은 다르다
+  - role을 부여하라 : 점차 의미 감소함 (다른 기능들로 해결됨)
+  - Fine-Tunning
+  - COT(충분한 시간)
+- 공식문서로 확인
+  - 명확한 지시
+  - 예시와 맥락 : 참조 텍스트 
+  - 복잡한 작업 분배
+    - 영문으로 요약해줘
+    - 요약한 영문을 한글로 번역해줘
+  - 생각할 시간을 제공 : 제한된 컴퓨팅 파워를 추가적으로 사용하는 것
+  - 외부도구 활용 : 참조 텍스트 제공과 유사한 방식
+  - 체계적인 테스트
+- 3가지로 요약됨 : **명확한 지시, Few Shot, COT**
+- Few Shot 예시
+  - Prompt (입력문):
+영어 문장을 한국어로 번역해줘.
+예시:
+I love you → 나는 너를 사랑해.
+How are you? → 어떻게 지내?
+Good night → 잘 자.
+(이제 이 문장을 번역해줘)
+See you tomorrow
+  - AI가 생각하는 흐름: "아~ 앞에서 영어 → 한국어 번역하는 거구나! 스타일도 비슷하게 해야겠네."
+  - AI 답변:
+내일 봐.
+- COT : Chain of Thought (생각의 흐름)
+  - AI가 정답을 바로 찍는 게 아니라, 생각 과정을 천천히 글로 풀면서 답을 찾게 하는 방법이야.
+  - 문제:
+사과가 3개 있고, 친구가 2개 더 줬어요. 사과는 모두 몇 개가 되었나요?
+    - Zero-shot (생각 과정 없이 바로 답) : 5개
+    - COT (Chain of Thought) :
+"처음에 사과가 3개 있었고, 친구가 2개를 더 줬어.
+그러니까 3 + 2 = 5.
+따라서 모두 5개야."
+- AI 업체들은 당분간은 살아남기 위해서 무료로 풀고 있다
+  - 바퀴를 만들려고 하지 마라 : 만들어진 것을 그냥 활용하지
