--- a/conhtml/CC202505061.md
+++ b/conhtml/CC202505061.md
@@ -6,7 +6,7 @@
 
 관세 문제는 확산과 해소의 관점으로 단순하게 보고 있으나,
 
-역사적 대통령이 되기 위한 무엇이 되기 위한 또다른 관점에서 봐야 함
+역사적인 대통령으로 기록되기 위한 또다른 관점에서 봐야 함
   - 레이 달리오 : 부채구조 구조적 한계로 
   - 조지 프레드만 : 헌법, 제도 
   - 닐 퍼거슨 : 사회의 붕괴 시스템
@@ -25,7 +25,7 @@
   - 평평한 운동장
   - 자유무역, 전후 복원 과정, 그때의 다우존스와 현재 나스닥
   - 운동장 기울어짐
-  - 신플라자합의
+  - 신플라자합의 (80년대 후반)
     - 유럽 : 제조 -> 소비
     - 일본 : 잃어버린 30년
     - 소련 : 체재 해체
@@ -34,11 +34,12 @@
   - 중국 중심 글로벌 공급망 구축
   - G2 중심 글로벌 변화
   - GDP 45%, 시가총액 60%
-  - 미국의 소비와 중국은 생산 : 낙수효과로 전세계 낙수효과
-  - 미국은 소비에서 생산, 중국은 생산에서 소비로 변화 : 자급자족 : 무역축소(우리나라를 대체함)
+  - 미국의 소비와 중국은 생산 : 전세계에 낙수효과 발생
+  - 미국은 소비에서 생산, 중국은 생산에서 소비로 변화 
+    - 자급자족 경제 : 무역축소(무역으로 먹고 사는 우리나라를 대체함)
 
-미국은 GDP는 증가하나, 시가총액은 하락할 
-  - #2 국가 50% 넘어가게 하지 않음
+미국은 GDP는 증가하나, 시가총액은 하락할 것 같음
+  - 2등 국가가 자신의 GDP를 50% 넘어가게 하지 않도록 제어했음 (일본, 독일)
   - 하지만, 중국은 누르지 못함 (2007, 글로벌 금융위기)
   - GDP 70% 수준, 구매력 기준 100%
 
@@ -67,7 +68,7 @@
   - 중간(1-2) 
     - 러우전쟁 종식 : 유가/곡물 가격 하락 / 관세 인플레이션 상쇄
     - 전략 광물 협정
-    - 푸틴. 시간의 자기의 편
+    - 푸틴. 시간은 자기의 편
   - 3단계 : 중국 
 
 결론
@@ -88,7 +89,7 @@
   - 펜데믹 이후 년 30% 이상 성장 (한국 소외)
   - 달려 자산의 구조적인 비중 확대 : 예전과 같은 기대수익률이 안 나올 것 같음
 
-미국 7 : 중국 3 포트폴리오 : 싸우면 둘 외에 나머지가 손해보는 싸음임
+미국 7 : 중국 3 포트폴리오 : 싸우면 둘 외에 나머지가 손해보는 구조임
   - 같이 사는 전략 필요
   - 스마일 커브 상에서 이익 높은 부분 차지한 미국이 제조 부분 도입하려고 함(마진 적은 부분)
   - 동일가중 S&P : 시가총액 위치가 달라질 것 같음
