--- a/conhtml/CC202506011.md
+++ b/conhtml/CC202506011.md
@@ -39,7 +39,7 @@
 
 057  1980년 광주에서 내가 고등학생일 때 계엄군이 나의 시를 검열했다. 나는 한 편의 시로 사람이 죽을 수도 있겠다고 생각했다.
 
-061  멀어져야 비로소 보이는 것들. 헤어짐은 다른 의미의 마주침이다. 13년을 새로운 당신과 살았다. / 첫 시집을 묶고 나서야 모들 말은 오해로 존재한다는 걸 알았다. 13년 동안 당신을 오역했다. 이것이 내 죄책감의 근원이다.
+061  멀어져야 비로소 보이는 것들. 헤어짐은 다른 의미의 마주침이다. 13년을 새로운 당신과 살았다. / 첫 시집을 묶고 나서야 모든 말은 오해로 존재한다는 걸 알았다. 13년 동안 당신을 오역했다. 이것이 내 죄책감의 근원이다.
 
 071  나쁜 습관이 있다. 중요한 것을 팔아서 덜 중요한 것을 사버린다. 참으로 무익했다. / 세상의 중요한 약속들을 어기거나 포기하고 많은 것들과 결별할 때 시가 써졌다.
 
