--- a/conhtml/CC202506061.md
+++ b/conhtml/CC202506061.md
@@ -33,7 +33,6 @@
 - 일본 : 메이지유신 등 위로부터의 개혁 실시 : 아베노믹스가 영향을 미치는데는 10년 넘게 걸림
 - 한국은 아래로부터의 개혁 가능 : 압축적으로 빠르게 될 수 있다
 - PBR 2900 초반이 1배임 : 여기까지는 저위험 구간 (25.06)
-- 시대에 당하지 말자 / 거대한 시대에 흐름에 몸을 맡기자 / FLOW
 
 <br>
 
@@ -100,4 +99,8 @@
 - 정부가 강하게 정책을 드라이브 걸때 
   - 상법 개정 / 배당소득분리과세,,, : 못하면 꽝이다
   - **맞서지 마라** 
+- PBR 1배
+  - 일본이 10년 걸린 것을 한국은 압축적으로 가능 : 아래로부터의 개혁 가능한 나라
+  - PBR 2900 초반이 1배임 : 여기까지는 저위험 구간 (25.06)
+  - 시대에 당하지 말자 / 거대한 시대에 흐름에 몸을 맡기자 / FLOW
 
