--- a/conhtml/CC202506201.md
+++ b/conhtml/CC202506201.md
@@ -28,16 +28,17 @@
 ### 059
 자주 활작 피고 싶은 꿈을 어떻게 한다?
 
-## 078
-나는 자꾸 문학하는 법을 잊고 화장하는 기술만 늘어요 어떻게 하죠? / 내가 30년이나 존재했다는 사실이 믿어지지가 않아 내 흔적을 찾으려면 어떤 자료실에 들어가야 하나요?
+### 078
+나는 자꾸 문학하는 법을 잊고 화장하는 기술만 늘어요 어떻게 하죠? /  
+내가 30년이나 존재했다는 사실이 믿어지지가 않아 내 흔적을 찾으려면 어떤 자료실에 들어가야 하나요?
 
 ### 098
 당신과 내가 나란히 누워  
 곤히 잠든 시간들만 따로 모아  
-목이 긴 호리병에 담아놓고 싶다
-따가운 볕 아래 펼쳐놓고
-증발할 때까지
-한 방울도 남김없이 사라질 때까지
+목이 긴 호리병에 담아놓고 싶다  
+따가운 볕 아래 펼쳐놓고  
+증발할 때까지  
+한 방울도 남김없이 사라질 때까지  
 맨송맨송한 민낮으로 바라보고 싵다
 
 ### 109
