--- a/conhtml/CC202601261.md
+++ b/conhtml/CC202601261.md
@@ -27,10 +27,10 @@
 ### 가을 햇살 앞에 (093)
 고개를 숙여라
 
-이제 방 안 깊숙이
+이제 방 안 깊숙이 <br>
 밀고 들어오는 햇살
 
-가을은, 가을 햇살은
+가을은, 가을 햇살은 <br>
 우리에게 겸손을 가르치고
 
 <br>
@@ -52,6 +52,12 @@
 <br>
 
 ### 사랑에 답함 (168)
+예쁘지 않은 것을 예쁘게 <br>
+보아주는 것이 사람이다
+
+좋지 않은 것을 좋게 <br>
+생각해주는 것이 사랑이다
+
 싫은 것도 잘 참아주면서  <br>
 처음만 그런 것이 아니라
 
@@ -80,6 +86,8 @@
 <br>
 
 ### 한 사람 건너 (186)
+애기 보듯 너를 본다
+
 꽃을 보듯 너를 본다
 
 <br>
