--- a/conhtml/CC202601263.md
+++ b/conhtml/CC202601263.md
@@ -1,34 +1,30 @@
 # 이것저것 정리 (26.01.26)
 
-전차의 시대
-- 시가총액 1,2,3원 
+전차의 시대 (삼성전자, 하이닉스, 현대차)
+- 시가총액 1,2,3위
 - 자동차산업 : 항상 저평가 산업, 공급과잉(고용이 많은 산업으로 국가지원으로 파산이 어렵다)
 - 아틀라스 : 산업현장 적합한 형태, 2년 내에 양산 예정, 1년 내에 상장한다면 가치를 땡길 수 있다
 - 엔비디아 / 구글과 연합 : 자율주행, 로보틱스
-
-로봇산업에서 버블이 나올 수 있다
-- 현재 숫자가 안 나오는 산업
-- 버블 시기에 해당 산업에 인재가 들어온다
-- 여기에서 진짜배기가 나온다. 다수는 망한다
-- 기술은 남는데, 자본은 대규모로 사라질 수 있다
-
-현대차 / 삼성전자
+  - 최고와 최고의 조합으로 테슬라와 대응
+  - 산업용로볼(정밀도)에서 가능성 
+  - VLA : 비전, 랭귀지, 액션 : 보고 듣고 행동하고
+  - 빠르게 실증사업
+  - 샤오미의 다크 팩토리
+  - 조지아공장 : 아틀라스 적용, 국경 넘기 어려울 수 있다
+  - 완전자동화로 어쩔 수 없이 갈 수 밖에 없다
 - 지배구조 개선, 보스턴다이너믹스 상장
 - 도요타 11배 : 현대차 적정주가, 로봇을 기대한다면 향후에 테슬라 주가 모양 따를수도
 - 삼성전자는 보유자의 영역(15), 현대차는 보유자 + 용기있는자 (30, 오를때보면그렇지)
 - 26년은 모두 반영한듯. 27년 이후는 모른다
 - 학습에서 추론으로 바뀌면서 메모리가 엄청 많이 필요하다 : 예측 못한 활황. 향후도...
 
-일본 국채 금리 급등
-- 다른 선진국들도 덩달아 안정이 안됨
-- 그린란드 사태로 덴마크에서 일부 국채 던짐, 캐나다 나도 있는데,,,
-- (일본) 은행 예금으로 국채를 많이 샀는데, 자금이 주식시장으로 이동중, 장기금리 급등
-- 2.8 선거, 국민 희생 강요로 또 돈풀기 할까?
-- 베센트 : 일본. 니가 알아서 국채 금리 안정화 시켜라
-
-변곡점 시점
-- 트럼프 : 베네주엘라, 그린란드 : 리플레이션 
-- 시장은 현재 위험구간으로 인식중
+로봇산업에서 버블이 나올 수 있다
+- 현재 숫자가 안 나오는 산업
+- 버블 시기에 해당 산업에 인재가 들어온다
+- 여기에서 진짜배기가 나온다. 다수는 망한다
+- 기술은 남는데, 자본은 대규모로 사라질 수 있다
+- 주가가 선행하고 심리는 후행한다
+- 현재 우리나라 개인들의 자본이 많다
 
 한국지수 
 - MSCI Korea USD / 필라델피아 반도체지수
@@ -39,14 +35,37 @@
 - 1천만 동학 운동 이후 3년 동안 침체 : 국내 주식을 왜 사야하지?
   - 애플카, 2차전지 등 기대감만으로 오르는 것은 금방 거품사라질 수 있다
 - PBR은 아직 싸지만, 부동산이 목 좋은 곳만 찾듯 주식도...
-- 코스닥 날뛰는 것은 거품일 수도
 - 시장은 격앙되어 있다. 현금도 투자다
 - 현재 시장은 상승세를 보고 투자하는 것이라면...
 - 주가는 항상 비샀다. 가격을 보고 사는 것이 아니라 벨류에이션을 보고 사야 한다
 - 액티브 펀드 : 수급을 통해서 올릴 수 있다. 
 - 5000은 어렵지 않다. 하지만, 지키는 것은 쉽지 않다
 
+코스닥지수 (거래소)
+- 거래소 정화가 먼저 : 특히 코스닥
+- 코스닥 날뛰는 것은 거품일 수도
+- 자금 조달 창구 역할 충실 / 투자자 보호는 외면
+
 지방활성화
 - 예산은 편성해 줄께. 어떻게 기업 유치할래
 - 주식 4, 부동산 0.15 : 대출할 때 위험 가중치
 - 둔촌 주공때 너무 많은 돈을 풀어서 연착륙할 시기를 놓쳤다
+
+
+일본 국채 금리 급등
+- 다른 선진국들도 덩달아 안정이 안됨
+- 그린란드 사태로 덴마크에서 일부 국채 던짐, 캐나다 나도 있는데,,,
+- (일본) 은행 예금으로 국채를 많이 샀는데, 자금이 주식시장으로 이동중, 장기금리 급등
+- 2.8 선거, 국민 희생 강요로 또 돈풀기 할까?
+- 베센트 : 일본. 니가 알아서 국채 금리 안정화 시켜라
+- 국내 금리 너무 높다. 하지만 낮추기 어렵다
+- 미국 디플레로 환율은 떨어져도 금리까지 떨어질지는 알 수 없다
+
+변곡점 시점
+- 트럼프 : 베네주엘라, 그린란드 : 리플레이션 
+- 시장은 현재 위험구간으로 인식중
+
+대만병
+- 경제성장률 7.4%인데, 임금은 안 오르는 이상한 나라
+- 외환보유고 6000억불 (우리나라 4000)
+- 양안문제, 97외환위기 겨우 넘김
