--- a/conhtml/CC202602241.md
+++ b/conhtml/CC202602241.md
@@ -47,15 +47,69 @@
 
 060 그림에서는 픽셀간에 인과관계가 없어서 독립적으로 해석할 수 있지만, 문장은 독립적으로 처리할 수 없습니다
 
+069 Attention is All You Need (2017, 구글 아시시 바스와니)
+- 문장에 있는 단어들이 서로 얼마나 자주 동시에 등장하는지, 그 집중 스코어만 계산하면 된다. (엄첨 많은 빅데이터 필요)
+
+074 데이터를 관찰해서 역으로 추론해 '이 데이터는 어떤 방식을 통해 만들어졌을까'를 알아내는 것이 이제는 연구자의 역할
+
+079 챗GPT는 챗봇 이상, 연구개발에서 중요한 역할, 그 내용을 조합해서 모르는 내용을 새롭게 찾아내는 역할
+
+081 앞으로 개발자, 디자이너, 기획자가 하나의 직업이 될 것 : 예쁘게 만들어줘(미적 감각) : 기능 위주 채용에서 판단력 위주 채용이 이루어질 것임
+
+085 현재 나타나는 업무의 비효율성은 인간과 컴퓨터 사이에 있는 간극에 의해서 발생하는 문제입니다.
+- CUI 시대 : 대화형 인터페이스 시대
+
+094 AI는 초기 학습 비용은 많이 들지만, 학습이 끝나면 저렴한 비용으로 대량 생산할 수 있습니다 (Zero Marginal Cost)
+
+099 세계화는 끝났습니다. 역사를 보면 협업보다는 분쟁, 평화보다는 전쟁이 더 많았습니다. 30년은 긴 관점으로 보면 아주 짧은 시간
+
 <br>
+
 
 ### 3장. 무서운 상상
+131 잡일의 핵심은 기계에 내가 원하는 걸 전달하는 데 시간이 걸린다는 겁니다. 인공지능 / CUI를 통해서 해결
+- CUI로 바꾸면 생산성이 30~40% 향상 가능할 듯
+
+135 사회의 생산성은 노동 투입량과 자본 투입량의 곱으로 계산됩니다. 로봇 도입으로 인간 노동 가치가 0이 됩니다. 그러면 사회의 모든 가치는 오로지 자본을 통해서만 만들어지게 됩니다
+
+141 로마 제국, 민주주의적 요소 가진 정치 체재, 참여권/법치주의/공론
+- 계속 전쟁에서 이김 : 몇 년씩 전쟁터에 있음. 생산성 떨어지는 가족들은,,, 
+- 노예의 등장(노동가치가 떨어짐), 불평들이 커지면서 중산층 몰락, 공화정에서 제국으로 변경(?), 기본소득
+
+162 행복함과 외로움 : 두 가지를 동시에 만족하기 힘듦
+- 인간은 이기적인 유전자를 가졌기 때문에 혼자 있는 게 제일 편합니다. 
+- 사회성을 갖춘 영장류이기 때문에 타인과 같이 있어야 행복합니다.
+
+167 결과가 비슷한데 하나가 압도적으로 편하면 당연히 그걸 사용할 겁니다
+- 인간과 대화 vs 인공지능과 대화
 
 <br>
+
 
 ### 4장. 호모 사피엔스의 미래
+187 스케일링 법칙(규모의 법칙)
+- 알고리즘을 하나도 바꾸지 않아도, 모델을 키우기만 하면 이상한 일들이 벌어집니다.
+- 경쟁가가 나보다 더 큰 모델을 가지면, 내가 발견하지 못한 새로운 기능을 발견해 버리면?
+- 인간의 뇌는 더 이상 클 수 없는데, 인공지능은 그 다음에도 계속 클 수 있습니다
+
+190 인공지능에 자아가 생겨나면?
+
+208 어렸을 때의 뇌가 나이 들었을 때의 뇌보다 휠씬 빨리 돌아간다
+
+225 생성형 인공지능의 리스크 (제프리 힌턴)
+- 참과 거짓이 구별되지 않는 세상이 될 수 있다
+- 인간이 할 일이 없는 세상이 될 수 있다
+- 인간이 없는 세상이 될 수 있다
+
+239 인간은 지금 반려동물을 키우고 있습니다
+- 인간은 필요할까? 기계는 무엇을 원할까?
+
+243 이탈리아 파시즘은 초기에는 미학 운동으로 시작 : 전통을 부수자 : 나치즘과 손 잡으면서,,,
+- 일론 머스크 : 서양 문명의 가장 큰 약점은 연민이다. 약한 사람을 불쌍히 여기는 순간 발전이 없다
+- 한나 아렌트 : 연민을 포기하는 순간 인간은 야만이 된다
 
 <br>
 
-### 나가며: 괴물의 시대를 헤쳐나가는 법
 
+### 나가며: 괴물의 시대를 헤쳐나가는 법
+253 인간과 인공지능의 미래는 공생 관계여야 한다
